Fix whitespace

--- a/static/style.css
+++ b/static/style.css
@@ -1,15 +1,24 @@
 @import url('https://fonts.googleapis.com/css?family=Nunito Sans');
 
+* {
+  margin: 0;
+  padding: 0;
+}
+
 :root {
     --floating-container-bg-colour: #fcfcfc;
 }
 
+html, body {
+  width: 100%;
+  height: 100%;
+  font-family: "Nunito Sans", sans-serif;
+  font-size: 16px;
+}
+
 body {
-    font-family: 'Nunito Sans', sans-serif;
-    font-size: 16px;
     text-align: justify;
     background-image: url("../assets/images/background.png");
-    height: 100%;
     background-repeat: repeat;
     background-size: cover;
 }
@@ -26,42 +35,28 @@ body {
   }
 }
 
-
 main {
     display: flex;
+    flex-direction: column;
     justify-content: center;
+    align-items: center;
     height: 100%;
+    width: 100%;
 }
 
 .floating-container {
     display: flex;
     flex-direction: column;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -webkit-flex-direction: column;
-
-    border-radius: 5px;
+    border-radius: 2em;
     background: var(--floating-container-bg-colour);
-    width: 75%;
-    min-height: 85%;
-    flex: 1;
-    position: absolute;
-    top: 50px;
-    padding: 10px;
-    
-    -webkit-box-shadow: -5px 10px 50px -22px rgba(0,0,0,0.3);
-    -moz-box-shadow: -5px 10px 50px -22px rgba(0,0,0,0.3);
-    box-shadow: -5px 10px 50px -22px rgba(0,0,0,0.3);
+    padding: 3em 5em;
+    box-shadow: -5px 10px 50px -22px rgba(0,0,0,0.4);
+    flex: 0 1 0;
 }
 
 .blurb {
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 100%;
-    flex: 1;
 }
 
 .blurb > * {
@@ -74,12 +69,15 @@ main {
     text-align: center;
 }
 
+.bio-wrapper {
+    width: 35vw;
+    margin: 0.8em 0;
+    align-self: center;
+    text-align: justify;
+}
+
 .bio-text {
     font-size: 1.25em;
-    align-self: center;
-    width: 50%;
-    text-align: justify;
-    margin: 0.8em 0;
 }
 
 hr {
@@ -153,9 +151,3 @@ a:hover {
     font-size: 1.25em;
 }
 
-.squiggle {
-    max-width: 300px;
-    object-fit: scale-down;
-    margin: 1em;
-    align-self: center;
-}
